<resources>
    <string name="app_name">CROOP</string>
    <string name="using_app_as">Ikaw ay gagamit ng aplikasyon bilang...</string>
    <string name="seller_caps">NEGOSYANTE</string>
    <string name="customer_caps">MAMIMILI</string>
    <string name="individual_caps">INDIBIDWAL</string>
    <string name="group_caps">GROUPO</string>
    <string name="grocery_caps">SA PAMAMALENGKE</string>
    <string name="retail_caps">SA PAGNENEGOSYO</string>
    <string name="sign_up">MAG-SIGN UP</string>
    <string name="as_a_cooperative">Bilang Isang Kooperatiba</string>
    <string name="name_of_cooperative">Pangalan ng Kooperatiba</string>
    <string name="enter_name">Ilagay ang Pangalan</string>
    <string name="first_name_of_point_person">Unang Pangalan ng Kinatawan</string>
    <string name="last_name_of_point_person">Apelyido ng Kinatawan</string>
    <string name="age">Edad (numero lamang hal. 21)</string>
    <string name="enter_age">21</string>
    <string name="position">Posisyon</string>
    <string name="enter_position">Ilagay ang Posisyon</string>
    <string name="next">Susunod</string>
    <string name="already_have_an_account">Mayroon ka na bang account?</string>
    <string name="sign_in">Mag-log in</string>
    <string name="house_street_name">Pangalan ng Bahay/Kalye</string>
    <string name="enter_house_street_name">Ilagay ang Pangalan ng Bahay/Kalye</string>
    <string name="subdivision_barangay">Subdibisyon/Barangay</string>
    <string name="enter_subdivision">Ilagay ang Subdibisyon</string>
    <string name="city">Lungsod</string>
    <string name="enter_city">Ilagay ang Lungsod</string>
    <string name="state_province_region">Estado/Lalawigan/Rehiyon</string>
    <string name="enter_state_province_region">Ilagay ang Estado/Lalawigan/Rehiyon</string>
    <string name="postal_code">Postal Code</string>
    <string name="enter_postal_code">Ilagay ang Postal Code</string>
    <string name="country">Bansa</string>
    <string name="enter_country">Ilagay ang Bansa</string>
    <string name="enter_PH_Phone_Number">09123456789</string>
    <string name="enter_valid_email">croop@gmail.com</string>
    <string name="enter_PH_Phone_Number_Indiv">Ilagay ang numero (hal. 09123456789)</string>
    <string name="enter_valid_email_Indiv">Ilagay ang email (hal. croop@gmail.com)</string>
    <string name="enter_password">Ilagay ang Password</string>
    <string name="password_requirements">Mga Kinakailangan sa Password:</string>
    <string name="pass_req_first_line">- Sa pagitan ng 8 at 32 na mga karakter.</string>
    <string name="pass_req_second_line">- Kinakailangan may isang maliit (a-z) at malaking (A-Z) letra.</string>
    <string name="pass_req_third_line">- Mayroong kahit isang numero (0-9).</string>
    <string name="pass_req_fourth_line">- Mayroong kahit isang espesyal na simbolo (hal., !,@,#,).</string>
    <string name="re_enter_passord">Ilagay uli ang Password</string>
    <string name="phone_number">Numero ng Telepono</string>
    <string name="as_a_farming_association">Bilang Isang Associasyon</string>
    <string name="name_of_farming_association">Pangalan ng Associasyon</string>
    <string name="enter_first_name">hal. Cardo</string>
    <string name="enter_last_name">hal. Dalisay</string>
    <string name="enter_first_name_Indiv">Ilagay ang Unang Pangalan (hal. Cardo)</string>
    <string name="enter_last_name_Indiv">Ilagay ang Apelyido (hal. Dalisay)</string>
    <string name="as_an_independent_farmer">Bilang Isang Malayang Magsasaka</string>
    <string name="first_name">Unang Pangalan</string>
    <string name="last_name">Apelyido</string>
    <string name="as_an_indiv_seller">Bilang Isang Indibidwal na Nagbebenta</string>
    <string name="oTP_Label">Isang OTP ang ipinadala sa iyong numero.</string>
    <string name="enter_OTP">Ilagay ang anim na numero</string>
    <string name="Did_not_receive_code">Walang OTP natanggap?</string>
    <string name="resend">Ipadala ulit ang OTP.</string>
    <string name="name_of_business">Pangalan ng Negosyo</string>
    <string name="enter_name_of_business">Ilagay ang Pangalan</string>
    <string name="as_a_retailer">Bilang Isang Negosyante</string>
    <string name="change_email">PALITAN ANG EMAIL</string>
    <string name="change_password">PALITAN ANG PASSWORD</string>
    <string name="change_phone_num">PALITAN ANG NUMERO NG TELEPONO</string>
    <string name="logout">MAG-LOGOUT</string>
    <string name="contact_us">Kontakin kami?</string>
    <string name="Click_which_one_would_you_like_to_reach_out_to">Piliin kung kanino mo gustong makipag-ugnayan:</string>">
    <string name="adding_items">PAGDAGDAG NG BAGAY</string>
    <string name="input_here_the_details_of_the_new_item_to_be_added">Ilagay ang mga detalye ng bagong bagay na idaragdag</string>
    <string name="item_name">Pangalan</string>
    <string name="item_quantitiy">Bilang</string>
    <string name="dicount">PROMO</string>
    <string name="add">I-DAGDAG</string>
    <string name="adding_product">PAGDAGDAG NG PRODUKTO</string>
    <string name="input_details_of_product_here">Ilagay ang mga detalye ng bagong produkto</string>
    <string name="price">Presyo (₱)</string>
    <string name="item_search">I-type ang produkto na hahanapin</string>
    <string name="search">HANAPIN </string>
    <string name="add_item">MAGDAGDAG NG PRODUKTO</string>
    <string name="street_name">Pangalan ng Kalye</string>
    <string name="subdivision">Subdibisyon</string>
    <string name="region">Rehiyon</string>
    <string name="edit_profile">BAGUHIN ANG PROFILE</string>
    <string name="phone_number_profile">Numero ng Telepono:</string>
    <string name="address">Tirahan</string>
    <string name="item_inventory">IMBENTARYO NG GAMIT</string>
    <string name="type_search_item">Ilagay ang pangalan ng gamit na hinahanap</string>
    <string name="add_item_to_inventory">IDAGDAG ANG GAMIT</string>
    <string name="used">Nagamit</string>
    <string name="remaining">Natitira</string>
    <string name="product_inventory">IMBENTARYO NG PRODUKTO</string>
    <string name="order">Mga Order</string>
    <string name="open">BUKSAN</string>
    <string name="welcome">Maligayang Pagdating!</string>
    <string name="inventory">Imbentaryo</string>
    <string name="inventory_description">Dito makikita ang imbentaryo ng mga produkto at mga bagay tulad ng buto o iba pang mga gamit.</string>
    <string name="analytics">Analitika</string>
    <string name="analytics_description">Dito makikita ang buod ng mahahalagang datos ng negosyo, gaya ng mga return, order, at mga sikat na produkto</string>
    <string name="order_description">Madaling masubaybayan at maayos ang lahat ng order sa iyong mga produkto.</string>
    <string name="discount_offers">Mga Promosyon</string>
    <string name="discount_description">I-click para gumawa ng promosyon</string>
    <string name="in_partnership">Katuwang Ang:</string>
    <string name="discount">Bawas/Discount</string>
</resources>