<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/beige_brackground">

    <TextView
        android:id="@+id/houseLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/mulish_medium"
        android:text="@string/as_a_cooperative"
        android:textAlignment="viewStart"
        android:textColor="@color/black_opaque_text"
        android:textSize="15sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUpCustomer5" />

    <TextView
        android:id="@+id/signUpCustomer5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/sign_up"
        android:textAlignment="center"
        android:textColor="@color/secondary_color"
        android:textSize="42sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/coopPaswordLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:text="@string/enter_password"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/houseLabel" />

    <EditText
        android:id="@+id/coopPasswordText"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/rounded_border_edit_text"
        android:ems="10"
        android:hint="@string/enter_password"
        android:inputType="text"
        android:paddingLeft="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.65"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/coopPaswordLabel" />

    <TextView
        android:id="@+id/coopRePasswordLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/re_enter_passord"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/coopRePasswordLabel7" />

    <EditText
        android:id="@+id/coopRePasswordText"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/rounded_border_edit_text"
        android:ems="10"
        android:hint="@string/re_enter_passord"
        android:inputType="text"
        android:paddingLeft="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/coopRePasswordLabel" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/secondary_color"
        android:paddingLeft="100dp"
        android:paddingTop="10dp"
        android:paddingRight="100dp"
        android:paddingBottom="10dp"
        android:text="@string/next"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/coopRePasswordText" />

    <TextView
        android:id="@+id/existingAcctLabel5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/already_have_an_account"
        android:textColor="@color/black_opaque_text"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <TextView
        android:id="@+id/signInHyperlink5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/sign_in"
        android:textColor="@color/highlight_green"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/existingAcctLabel5"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/coopRePasswordLabel3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:text="@string/password_requirements"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/coopPasswordText" />

    <TextView
        android:id="@+id/coopRePasswordLabel4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/pass_req_first_line"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/coopRePasswordLabel3" />

    <TextView
        android:id="@+id/coopRePasswordLabel5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/pass_req_second_line"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/coopRePasswordLabel4" />

    <TextView
        android:id="@+id/coopRePasswordLabel6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/pass_req_third_line"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/coopRePasswordLabel5" />

    <TextView
        android:id="@+id/coopRePasswordLabel7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/pass_req_fourth_line"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/coopRePasswordLabel6" />

</androidx.constraintlayout.widget.ConstraintLayout>