<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/beige_brackground"
        android:fillViewport="true"
        tools:layout_editor_absoluteY="173dp"> <!-- Ensures content fills the viewport -->

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp"> <!-- Padding for consistent spacing -->

            <!-- Sign Up Label -->
            <TextView
                android:id="@+id/indivFarmLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/mulish_medium"
                android:text="@string/as_an_independent_farmer"
                android:textAlignment="center"
                android:textColor="@color/black_opaque_text"
                android:textSize="15sp"
                android:textStyle="bold|italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signUpLabel" />

            <!-- House/Street Label -->

            <!-- House/Street Input -->

            <TextView
                android:id="@+id/signUpLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:fontFamily="@font/inter_semibold"
                android:text="@string/sign_up"
                android:textAlignment="center"
                android:textColor="@color/secondary_color"
                android:textSize="42sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/indivFarmStreetlabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="40dp"
                android:fontFamily="@font/mulish_medium"
                android:text="@string/house_street_name"
                android:textColor="@color/black_opaque_text"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/indivFarmLabel" />

            <EditText
                android:id="@+id/indivFarmHouseText"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/rounded_border_edit_text"
                android:hint="@string/enter_house_street_name"
                android:paddingStart="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/indivFarmStreetlabel" />

            <TextView
                android:id="@+id/indivFarmSubdivisionLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/mulish_medium"
                android:text="@string/subdivision_barangay"
                android:textColor="@color/black_opaque_text"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/indivFarmHouseText" />

            <EditText
                android:id="@+id/indivFarmSubdivisionText"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/rounded_border_edit_text"
                android:hint="@string/enter_subdivision"
                android:paddingStart="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/indivFarmSubdivisionLabel" />

            <TextView
                android:id="@+id/indivFarmCityLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/mulish_medium"
                android:text="@string/city"
                android:textColor="@color/black_opaque_text"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/indivFarmSubdivisionText" />

            <EditText
                android:id="@+id/indivFarmCityText"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/rounded_border_edit_text"
                android:hint="@string/enter_city"
                android:paddingStart="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/indivFarmCityLabel" />

            <TextView
                android:id="@+id/indivFarmRegionLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/mulish_medium"
                android:text="@string/state_province_region"
                android:textColor="@color/black_opaque_text"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/indivFarmCityText" />


            <EditText
                android:id="@+id/indivFarmRegionText"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/rounded_border_edit_text"
                android:hint="@string/enter_state_province_region"
                android:paddingStart="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/indivFarmRegionLabel" />

            <TextView
                android:id="@+id/indivFarmPostalLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/mulish_medium"
                android:text="@string/postal_code"
                android:textColor="@color/black_opaque_text"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/indivFarmRegionText" />

            <EditText
                android:id="@+id/indivFarmPostalText"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/rounded_border_edit_text"
                android:hint="@string/enter_postal_code"
                android:paddingStart="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/indivFarmPostalLabel" />

            <TextView
                android:id="@+id/indivFarmCountryLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/mulish_medium"
                android:text="@string/country"
                android:textColor="@color/black_opaque_text"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/indivFarmPostalText" />

            <EditText
                android:id="@+id/indivFarmCountryText"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/rounded_border_edit_text"
                android:hint="@string/enter_country"
                android:paddingStart="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/indivFarmCountryLabel" />

            <Button
                android:id="@+id/nextButton"
                android:layout_width="wrap_content"
                android:layout_height="63dp"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/secondary_color"
                android:fontFamily="@font/inter_semibold"
                android:paddingLeft="100dp"
                android:paddingTop="10dp"
                android:paddingRight="100dp"
                android:paddingBottom="10dp"
                android:text="@string/next"
                android:textSize="22sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/indivFarmCountryText" />

            <!-- Already Have an Account -->


            <TextView
                android:id="@+id/existingAcctLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/already_have_an_account"
                android:textColor="@color/black_opaque_text"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nextButton" />

            <!-- Sign In Hyperlink -->
            <TextView
                android:id="@+id/signInHyperlink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="50dp"
                android:text="@string/sign_in"
                android:textColor="@color/highlight_green"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/existingAcctLabel" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>